<package format="2">
  <name>pybind11_utils</name>
  <version>0.0.0</version>
  <description>utilities for pybind11</description>

  <maintainer email="kshitijgoel16061995@gmail.com">Kshitij Goel</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pybind11_catkin</depend>
  <depend>eigen_utils</depend>
  <depend>control_arch</depend>
  <depend>nav_msgs</depend>

</package>
